=Updating template and adding settings

--- a/config.json
+++ b/config.json
@@ -1,5 +1,11 @@
 {
 	"server": {
 		"port": 3000
+	},
+	"app": {
+		"dbserver": "",
+		"collection": "mediaServer",
+		"applicationId": "",
+		"media": ""
 	}
 }
